# eAPI

./: .env  .gitignore  Cargo.toml  Makefile  README.md  Readme.md  docker-compose-all-tests.yml  docker-compose-tests.yml  docker-compose.yml  package-lock.json  siege.py
.github/workflows/: ci.yml  rust.yml
api/: .dockerignore  .env  Cargo.toml  Dockerfile  Dockerfile.tests  Dockerfile.tests.all
api/docker/: Dockerfile  Dockerfile.tests
api/migrations/: 20250109145035_init.up copy.sql  20250110101730_orders_details_table.up.sql  20250110175352_product_table.up.sql  20250110223425_orders_table.up.sql
api/src/: error.rs  main.rs  middleware.rs
api/src/database/: init.rs  mod.rs  psql.rs  transaction.rs
api/src/docs/: mod.rs
api/src/dtos/: mod.rs  orders.rs  products.rs  users.rs
api/src/routes/: auth.rs  mod.rs  orders.rs  products.rs  root.rs  user.rs
api/src/utils/: config.rs  constants.rs  mod.rs  models.rs  password.rs  status.rs  test_utils.rs  token.rs
api/srcs/: Cargo.toml
api/srcs/src/: error.rs  main.rs  middleware.rs  models.rs
api/srcs/src/database/: init.rs  mod.rs  psql.rs  transaction.rs
api/srcs/src/dtos/: mod.rs  orders.rs  products.rs  users.rs
api/srcs/src/extractors/: auth.rs
api/srcs/src/impls/: mod.rs  order.rs  order_details.rs  product.rs  user.rs
api/srcs/src/models/: user.rs
api/srcs/src/routes/: auth.rs  mod.rs  orders.rs  products.rs  root.rs  user.rs
api/srcs/src/routes/order/: mod.rs  root.rs
api/srcs/src/routes/product/: mod.rs  root.rs
api/srcs/src/routes/user/: mod.rs  root.rs
api/srcs/src/services/: mod.rs
api/srcs/src/services/db_services/: product.rs
api/srcs/src/services/redis_services/: users.rs
api/srcs/src/services/sessions/: mod.rs
api/srcs/src/services/users/: login.rs
api/srcs/src/utils/: app_state.rs  config.rs  constant.rs  mod.rs  test_utils.rs
api/tools/: entrypoint.sh  wait_for_db.sh
app/: docker-compose.yml
app/api/: Dockerfile
app/api/migrations/: 20250109145036_user_table.up.sql
app/api/srcs/: Cargo.toml
app/backend/: Dockerfile  backend_entrypoint.sh
app/backend/migrations/: 20250109145036_user_table.up.sql  20250110101730_orders_details_table.up.sql  20250110175352_product_table.up.sql  (+1 more)
app/backend/srcs/: .env  Cargo.toml
app/backend/srcs/migration/src/: lib.rs  m20250106_202832_create_user_table.rs
app/backend/srcs/migrations/: 20250109145036_user_table.up.sql  20250110175352_product_table.up.sql  20250110223425_orders_table.down.sql
app/backend/srcs/src/: main.rs  user.rs
app/backend/srcs/src/database/: db.rs  mod.rs
app/backend/srcs/src/impls/: order.rs
app/backend/srcs/src/routes/: home_routes.rs  mod.rs
app/backend/srcs/src/routes/handlers/: mod.rs  root_handlers.rs  user_handler.rs
app/backend/srcs/src/routes/order/: mod.rs
app/backend/srcs/src/routes/product/: mod.rs
app/backend/srcs/src/routes/products/: mod.rs
app/backend/srcs/src/routes/user/: mod.rs
app/backend/srcs/src/utils/: api_response.rs  app_state.rs  constant.rs  database.rs  mod.rs  security.rs
app/database/: Dockerfile
app/frontend/: Dockerfile
backend/: Dockerfile  README.md  docker-compose.yml
backend/api/: Dockerfile  api_entrypoint.sh
docker/: docker-compose-all-tests.yml  docker-compose-dev.yml  docker-compose-tests.yml  docker-compose.yml
frontend/: Dockerfile  package-lock.json  package.json
frontend/requirements/: package-lock.json  package.json  tsconfig.json
frontend/src/: App.css  App.jsx  api.js  index.tsx  reportWebVitals.ts
migrations/: 20250109145035_init.down.sql  20250109145036_user_table.up.sql  20250110175352_product_table.up.sql  20250110223425_orders_table.up.sql
src/: main.rs
src/database/: psql.rs  transaction.rs
src/dtos/: mod.rs
src/extractors/: auth.rs
src/routes/: orders.rs  products.rs
src/utils/: config.rs  constants.rs  test_utils.rs
(+102 files in other folders)
