[package]
name = "myapi"
version = "0.1.0"
edition = "2021"

[build]
rustflags = ["-A unused"]

[dependencies]
actix-web = "4.9.0"
actix-session = { version = "0.10.1", features = ["cookie-session", "redis-session"] }

serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"

sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
deadpool-postgres = "0.14.1"

# redis = { version = "0.28.2", features = ["tokio-comp"] }
# deadpool-redis = "0.18.0"

env_logger = "0.11.6"
lazy_static = "1.5.0"
bcrypt = "0.16.0"
cors = "0.1.0"
actix-cors = "0.7.0"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }
jsonwebtoken = "9.3.0"
async-trait = "0.1.85"
chrono = { version = "0.4.39", features = ["serde"]}
futures-util = "0.3.31"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
sqlx-core = "0.8.3"
ring = "0.17.8"
colored = "3.0.0"
