[package]
name = "myapp"
version = "0.1.0"
edition = "2021"

[build]
rustflags = ["-A unused"]

[dependencies]
actix-web = "4.9.0"
actix-session = { version = "0.10.1", features = ["cookie-session", "redis-session"] }
actix-cors = "0.7.0"

serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"

sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres"] }
deadpool-postgres = "0.14.1"

redis = { version = "0.28.1", features = ["tokio-comp"] }
deadpool-redis = "0.18.0"

dotenv = "0.15.0"
env_logger = "0.11.6"
lazy_static = "1.5.0"
bcrypt = "0.16.0"