[package]
name = "myapp"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
dotenv = "0.15.0"
env_logger = "0.11.6"
lazy_static = "1.5.0"
postgres = "0.19.9"
qstring = "0.7.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.42.0", features = ["full"] }
tokio-postgres = "0.7.12"
uuid = "1.11.0"
