[package]
name = "myapp"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
dotenv = "0.15.0"
env_logger = "0.11.6"
lazy_static = "1.5.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.43.0", features = ["full"] }
tokio-postgres = "0.7.12"
deadpool-postgres = "0.14.1"
uuid = "1.11.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
